Fix permgen errors for scala samples tests on JDK6